# FastAPI-Twitter-Clone

./: .env  .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: build_cache.yml
server/: Dockerfile  nginx.conf
server/static/js/: app.7c9275be.js  chunk-0420bcc4.11441662.js  chunk-6f77c742.f09861a7.js  chunk-vendors.398321e0.js
src/: Dockerfile  alembic.ini  alembic_inside.ini  main.py
src/database/: docker-compose.yaml  init_db.py  local-db-compose.yaml  models.py  schemas.py  service.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2023_05_26_1009-4867f1ff6fe9_.py  2023_05_26_1106-e7e342ea53f6_.py  2023_05_26_1205-f4398eb0d2a4_add_users_data.py
src/exceptions/: HTTPExceptions.py
src/routers/: __init__.py  media.py  tweets.py  users.py
src/schemas/: tweet_schema.py  user_schema.py
src/server/: Dockerfile  docker-compose.yaml  nginx.conf
src/server/static/: index.html
src/server/static/js/: chunk-10e0d5b4.e80e67b6.js  chunk-6f77c742.f09861a7.js  chunk-732a3e8c.57e36fb4.js  chunk-76301fe8.cc56c3b1.js
src/utils/: authentication.py  file_system.py  responses.py  service.py  settings.py
tests/: conftest.py  docker-compose.yaml  test-db-compose.yaml  test-db.yaml  test_tweets.py  test_users.py
